--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
+    "formidable-serverless": "^1.1.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
